--- a/index.html
+++ b/index.html
@@ -580,6 +580,8 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle"><p align="center" style="margin-left:-2.5em;">Service</p><img src="images/mentor.jpg"></td>
               <td width="75%" valign="center">
+                <a href="https://cvpr.thecvf.com/">Reviewer, CVPR </a>[2025, 2026]
+                <br>
                 <a href="https://iclr.cc/">Reviewer, ICLR </a>[2025, 2026]
                 <br>
                 <a hreaf="https://aaai.org/conference/aaai/aaai-26/">Reviewer, AAAI </a>[2026]
@@ -587,8 +589,6 @@ recent state-of-the-art models to encode geotagged audio, a textual description 
                 <a href="https://neurips.cc/">Reviewer, NeurIPS</a> [2024<font color="red"><strong> (Top Reviewer, Top 8%)</strong></font>, 2025]
                 <br>
                 <a href="https://jmlr.org/tmlr/">Reviewer, Transactions on Machine Learning Research (TMLR) </a>[2025]
-                <br>
-                <a href="https://cvpr.thecvf.com/">Reviewer, CVPR </a>[2025]
                 <br>
                 <a href="https://icml.cc/">Reviewer, ICML </a>[2025]
                 <br>
