--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div> 
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="RCME/index.html">
+                <a href="https://openaccess.thecvf.com/content/ICCV2025/html/Sastry_Global_and_Local_Entailment_Learning_for_Natural_World_Imagery_ICCV_2025_paper.html">
                   <span class="papertitle">Global and Local Entailment Learning for Natural World Imagery</span>
                 </a>
                 <br>
