--- a/index.html
+++ b/index.html
@@ -66,6 +66,68 @@
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
                   <div class="two" id='psm_image'>
+                  <source src="images/vectorsynth.png"></div>
+                  <img src='images/vectorsynth.png' width="95%" style="padding-top: 35px;">
+                </div> 
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="">
+                  <span class="papertitle">VectorSynth: Fine-Grained Satellite Image Synthesis with Structured Semantics</span>
+                </a>
+                <br>
+                <a href="https://dcher95.github.io/">Dan Cher</a>,
+                <a href="">Brian Wei</a>,
+                <strong>Srikumar Sastry</strong>,
+                <a href="https://jacobsn.github.io/">Nathan Jacobs</a>
+                <br>
+                <em>WACV</em>, 2026
+                <br>
+                <a href="">project page</a>
+                /
+                <a href="">github</a>
+                /
+                <a href="">arXiv</a>
+                <p>We introduce VectorSynth, a diffusion-based model that generates pixel-accurate satellite imagery from polygonal geographic annotations with semantic attributes, enabling spatially grounded, geometry- and language-guided image synthesis and editing with superior semantic and structural fidelity.</p>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <div class="two" id='psm_image'>
+                  <source src="images/prom3e_overview.jpg"></div>
+                  <img src="images/prom3e_overview.jpg" width="95%" style="padding-top: 35px;">
+                </div> 
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="https://arxiv.org/pdf/2511.02946">
+                  <span class="papertitle">ProM3E: Probabilistic Masked MultiModal Embedding Model for Ecology</span>
+                </a>
+                <br>
+            <strong>Srikumar Sastry</strong>,
+                <a href="https://subash-khanal.github.io/">Subash Khanal</a>,
+                <a href="https://sites.wustl.edu/aayush/">Aayush Dhakal</a>,
+                <a href="">Jiayu Lin</a>,
+                <a href="https://dcher95.github.io/">Dan Cher</a>,
+                <a href="">Phoenix Jarosz</a>,
+                <a href="https://jacobsn.github.io/">Nathan Jacobs</a>
+                <br>
+                <em>Preprint</em>, 2025
+                <br>
+                <a href="">project page</a>
+                /
+                <a href="">github</a>
+                /
+                <a href="https://arxiv.org/abs/2511.02946">arXiv</a>
+                <p>We introduce ProM3E, a probabilistic masked multimodal embedding model that enables any-to-any modality generation, fusion feasibility analysis, and superior cross-modal retrieval and representation learning through masked modality reconstruction in the embedding space.</p>
+                <p>
+                  
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <div class="two" id='psm_image'>
                   <source src="images/teaser_2_cone.png"></div>
                   <img src='images/teaser_2_cone.png' width="95%" style="padding-top: 35px;">
                 </div> 
