--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
                 </div> 
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="">
+                <a href="https://arxiv.org/pdf/2511.07744">
                   <span class="papertitle">VectorSynth: Fine-Grained Satellite Image Synthesis with Structured Semantics</span>
                 </a>
                 <br>
-                <a href="https://dcher95.github.io/">Dan Cher</a>,
-                <a href="">Brian Wei</a>,
+                <a href="https://dcher95.github.io/">Dan Cher*</a>,
+                <a href="">Brian Wei*</a>,
                 <strong>Srikumar Sastry</strong>,
                 <a href="https://jacobsn.github.io/">Nathan Jacobs</a>
                 <br>
@@ -86,7 +86,7 @@
                 /
                 <a href="">github</a>
                 /
-                <a href="">arXiv</a>
+                <a href="https://arxiv.org/abs/2511.07744">arXiv</a>
                 <p>We introduce VectorSynth, a diffusion-based model that generates pixel-accurate satellite imagery from polygonal geographic annotations with semantic attributes, enabling spatially grounded, geometry- and language-guided image synthesis and editing with superior semantic and structural fidelity.</p>
               </td>
             </tr>
