--- a/index.html
+++ b/index.html
@@ -66,6 +66,39 @@
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
                   <div class="two" id='psm_image'>
+                  <source src="images/cgm_1_.png"></div>
+                  <img src='images/cgm_1_.png' width=100%>
+                </div> 
+              </td>
+              <td style="padding:20px;width:75%;vertical-align:middle">
+                <a href="https://openreview.net/forum?id=0SMr5nFzdG">
+                  <span class="papertitle">DiffVAS: Diffusion-Guided Visual Active Search in Partially Observable Environments
+                  </span>
+                </a>
+                <br>
+                <a href="https://anindyasarkariith.github.io/">Anindya Sarkar</a>*,
+            <strong>Srikumar Sastry</strong>*,
+                <a href="https://aleksispi.github.io/">Aleksis Pirinen</a>,
+                <a href="https://jacobsn.github.io/">Nathan Jacobs</a>,
+                <a href="https://vorobeychik.com/">Yevgeniy Vorobeychik</a>
+                <br>
+                <em>AAMAS</em>, 2026 &nbsp <font color="red"><strong>(Oral Presentation)</strong></font>
+                <br>
+                <a href="">project page</a>
+                /
+                <a href="">github</a>
+                /
+                <a href="">arXiv</a>
+                <p></p>
+                <p>
+                  We consider the task of active geo-localization (AGL) in which an agent uses a sequence of visual cues observed during aerial navigation to find a target specified through multiple possible modalities.
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding:20px;width:25%;vertical-align:middle">
+                <div class="one">
+                  <div class="two" id='psm_image'>
                   <source src="images/vectorsynth.png"></div>
                   <img src='images/vectorsynth.png' width="95%" style="padding-top: 35px;">
                 </div> 
@@ -269,7 +302,7 @@
           </span>
         </a>
         <br>
-        <a href="https://sites.wustl.edu/aayush/">Anindya Sarkar</a>*,
+        <a href="https://anindyasarkariith.github.io/">Anindya Sarkar</a>*,
     <strong>Srikumar Sastry</strong>*,
         <a href="https://aleksispi.github.io/">Aleksis Pirinen</a>,
         <a href="https://mig-ai.github.io/person-zhangchongjie.html">Chonjie Zhang</a>,
